--- a/tagviewsample/src/main/AndroidManifest.xml
+++ b/tagviewsample/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name=".GuideActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -16,8 +19,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".MainActivity"/>
         <activity android:name=".ListViewActivity"/>
         <activity android:name=".RecyclerViewActivity"/>
+        <activity android:name=".PictureTagActivity"/>
     </application>
 
 </manifest>
